syntax = "proto3";

option go_package = "booking-backend/common/proto/users_service";

import "google/api/annotations.proto";

message Address {
  string street = 1;
  int32 number = 2;
  string city = 3;
  string country =4;
}

message User {
  string email = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  Address address = 5;
  string role = 6;
}

message UserFull {
  string email = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  Address address = 5;
  string role = 6;
  bool isProminent = 7;
}

service UsersService {
  rpc CreateUser(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/register"
      body: "*"
    };
  }
  rpc UpdateUser(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/user"
      body: "*"
    };
  }
  rpc DeleteUser(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/user"
    };
  }
  rpc GetUserData(GetRequest) returns (UserFull) {
    option (google.api.http) = {
      get: "/user"
    };
  }

  rpc LoginCheck(LoginRequest) returns (LoginResponse) {
  }
}

message CreateRequest {
  User user = 1;
}

message CreateResponse {
  string message = 1;
}

message UpdateRequest {
  User user = 1;
}

message UpdateResponse {
  string message = 1;
}

message DeleteRequest {
}

message DeleteResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
}

message GetRequest {
  }
